continuing on other pc. still having problems making polls with usage of id